<resources>
    <string name="app_name">School Helper</string>

    <string name="app_about">О нас</string>
    <string name="todo">TODO</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Открыть navigation drawer</string>
    <string name="navigation_drawer_close">Закрыть navigation drawer</string>

    <string name="are_you_sure">Вы уверены, что хотите выйти?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>

    <string name="nav_header_title">School Helper</string>
    <string name="nav_header_subtitle">semyon3336@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_color">Смена фона</string>

    <string name="menu_physics">Физика</string>
    <string name="menu_inform">Информатика</string>
    <string name="menu_ximia">Химия</string>
    <string name="menu_about">О нас</string>
    <string name="menu_howwork">Как работает?</string>
    <string name="communicate">Помошь</string>

    <string name="fragment_greeting">Приветствие</string>
    <string name="fragment_inform">Информатика</string>
    <string name="fragment_physics">Физика</string>
    <string name="fragment_ximia">Химия</string>

    <string name="button_pay">Расчёт</string>
    <string name="button_decision">Решение</string>

    <string name="limit">Превышен лимит символов</string>
    <string name="incorrect_number">Неправильно выбрана система счисления числа</string>
    <string name="enter_the_number">Введите число, чтобы не возникло ошибки</string>

    <string name="input_number">Введите число:</string>
    <string name="number_system">Его система счисления</string>
    <string name="transfer">Перевести в</string>
    <string name="result">РЕЗУЛЬТАТ</string>
    <string name="number">жду числа</string>
    <string name="rectract">Перевести</string>
    <string name="string_locale">%,d</string>

    <string name="Hello">Привет!</string>
    <string name="do_svayp">Сделай \'Свайп\' вправо и начинай роботать :)</string>
    <string name="thank_you_for_downloading_our_application">Спасибо, что скачали наше приложение. \nВЫ сможете воспользоваться:\n       1. Словарем формул по физике\n       2. Балансировка химических реакций\n       3. Перевод чисел из разных систем счисления с подробным пояснением</string>
    <string name="will_give">"Приведем "</string>
    <string name="number_systems">" из системы счисления "</string>
    <string name="decimal_number_system">" в десятичную систему счисления:"</string>
    <string name="arrow"><![CDATA[—>]]></string>
    <string name="give_the_integer_part">"Приведем целую часть числа "</string>
    <string name="in_number_systems">" в систему счисления "</string>
    <string name="successive_division_by_number">" последовательным делением на число "</string>
    <string name="point">.</string>
    <string name="writing_the_result">"Записав полученные цифры в ряд снизу вверх, получим:"</string>
    <string name="android_market">Не удалось открыть Android-маркет, проверьте, установлено приложение маркета или нет. Попробуйте позже</string>
    <string name="take_razdel">Выбери раздел:</string>
    <string name="ip_cal">Сетевой калькулятор</string>
    <string name="scale_cal">Калькулятор систем счисления</string>
    <string name="In_developing">В разработке</string>
    <string name="ppt_co_samsung"><![CDATA[Приложение разработано компанией PPT.co при поддержке <<школы Samsung\'а>>]]></string>
    <string name="http_www_ppt_co">http://www.PPT.co</string>
    <string name="input_formulas">Введите название формулы:</string>


    <string-array name="spinner_numbers_1">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="spinner_numbers_2">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>16</item>
    </string-array>
</resources>
