<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="272dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/pay_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="0"
                android:text="@string/input_number"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                tools:ignore="UnusedAttribute" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pay_textview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_system"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dialog"
                android:textSize="16sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pay_textview3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/transfer"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dialog"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/pay_textview4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rectract"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

</LinearLayout>